// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components <SelectionComponent /> renders text input component correctly 1`] = `
<SelectionComponent
  category="field"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {
        "label": "Selection Label",
        "title": "Selection",
      },
      "now": [Function],
      "textComponent": "span",
    }
  }
  label={null}
  radioBoxType={false}
  selectionList={Array []}
  type="selection"
  uid="noHeaderSelection"
>
  <Styled(List)>
    <List
      style={Object {}}
    >
      <View
        style={Object {}}
      >
        <View
          style={Object {}}
        />
      </View>
    </List>
  </Styled(List)>
</SelectionComponent>
`;

exports[`components <SelectionComponent /> renders text input component correctly 2`] = `
<SelectionComponent
  category="field"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {
        "label": "Selection Label",
        "title": "Selection",
      },
      "now": [Function],
      "textComponent": "span",
    }
  }
  label={null}
  radioBoxType={false}
  selectionList={Array []}
  type="selection"
  uid="selectionExample"
>
  <Styled(List)>
    <List
      style={Object {}}
    >
      <View
        style={Object {}}
      >
        <View
          style={Object {}}
        />
      </View>
    </List>
  </Styled(List)>
</SelectionComponent>
`;

exports[`components <SelectionComponent /> renders text input component correctly 3`] = `
<SelectionComponent
  category="field"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {
        "label": "Selection Label",
        "title": "Selection",
      },
      "now": [Function],
      "textComponent": "span",
    }
  }
  label={null}
  radioBoxType={false}
  selectionList={Array []}
  type="selection"
  uid="radioSelectionExample"
>
  <Styled(List)>
    <List
      style={Object {}}
    >
      <View
        style={Object {}}
      >
        <View
          style={Object {}}
        />
      </View>
    </List>
  </Styled(List)>
</SelectionComponent>
`;
